# trabalho-2-auto-complete-e-autocorrect

./: CMakeLists.txt  README.md  README2.md  author.md  ncurses.cmake
data/: cities.txt  ptbrcorpus.txt  teste1.txt  teste2.txt  wikitionary.txt
include/: Autocomplete.hpp  Autocorrect.hpp  Interface.hpp  Ordenacao.hpp  Processamento.hpp
src/: Autocomplete.cpp  Autocorrect.cpp  Interface.cpp  Ordenacao.cpp  Processamento.cpp  main.cpp  main_ncurses.cpp
